<?xml version="1.0"?>
<package format="2">
  <name>lkh_solver</name>
  <version>0.1.1</version>
  <description>
    ROS package for solving the Traveling Salesman Problem using the
    Lin-Kernighan heuristic.
  </description>

  <author email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</author>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD 3-Clause</license>
  <url type="repository">https://github.com/crigroup/lkh</url>
  <url type="bugtracker">https://github.com/crigroup/lkh/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <exec_depend>resource_retriever</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
